fix commit message alignment, branch selection dropdown, distance between buttons

--- a/frontend/styles/repository.css
+++ b/frontend/styles/repository.css
@@ -1,7 +1,5 @@
 body {
-    display: flex;
     flex-direction: column;
-    min-height: 100vh;
 }
 
 .container {
@@ -49,6 +47,7 @@ body {
 
 .branch-menu {
     float: left;
+    display: flex;
 }
 
 .branch-menu-button {
@@ -63,6 +62,10 @@ body {
     font-weight: 500;
 }
 
+#new-branch-button {
+    margin-left: 1rem;
+}
+
 .branch-menu-button svg {
     fill: currentColor;
 }
@@ -72,6 +75,7 @@ body {
 }
 
 #branch-dropdown-content {
+    margin-top: 32px;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
@@ -93,13 +97,19 @@ body {
     cursor: pointer;
 }
 
-.commit-info {
+.repo-description {
     display: flex;
-    font-size: 12px;
-    color: #586069;
+    justify-content: space-between;
+    gap: 0.5rem;
 }
 
-.commit-info .last-commit {
+.commit-info {
+    font-size: 12px;
+    color: #586069;
+    align-content: center;
+}
+
+.commit-info .last-commit .commit-time {
     margin-right: 8px;
 }
 
